--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "leaflet": "^1.9.4",
     "lenis": "^1.3.17",
     "lucide-react": "^0.544.0",
-    "next": "15.5.2",
+    "next": "^16.1.6",
     "react": "19.1.0",
     "react-chartjs-2": "^5.3.0",
     "react-dom": "19.1.0",
@@ -40,7 +40,7 @@
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "eslint": "^9",
-    "eslint-config-next": "15.5.2",
+    "eslint-config-next": "^16.1.6",
     "tailwindcss": "^4",
     "typescript": "^5"
   }
